[package]
name = "envlt"
version = "0.5.10"
description = """vault client using jwt authentication that defines environment variables from vault secrets before
executing to something else"""
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
argh = "0.1.4"
env_logger = "0.8.4"
libc = "0.2.102"
log = "0.4.14"
serde_json = "1.0.68"
thiserror = "1.0.29"
vault-jwt = { version = "0.9.1", features = [] }
# vault-jwt = { version = "0.9.1", features = ["nom"] }

[patch.crates-io]
vault-jwt = { git = "https://github.com/eburghar/vault-jwt.git", tag = "0.9.1" }
# vault-jwt = { path = "../vault-jwt" }
